--- a/client/src/app/main.css
+++ b/client/src/app/main.css
@@ -6,8 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* color: white; */
-  outline: 1px solid black;
+  /* outline: 1px solid black; */
 }
 
 body {
